force-app/main/default/objects/Vent_SW_Upgrade_Info__c/Vent_SW_Upgrade_Info__c.object-meta.xml
<CustomObject>
    <description>This table is created for Breathe Technologies, SW Upgrade Tool. This table maintains records of the SW upgrade performed on the Life2000 ventilator.</description>
    <label>Vent SW Upgrade Info</label>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>Vent SW Upgrade Info</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vent SW Upgrade Infos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>