force-app/main/default/objects/Vent_SW_Upgrade_Info__c/fields/New_SW_Version__c.field-meta.xml
<CustomField>
    <fullName>New_SW_Version__c</fullName>
    <label>New SW Version</label>
    <length>11</length>
    <type>Text</type>
</CustomField>