force-app/main/default/objects/Vent_SW_Upgrade_Info__c/fields/Old_SW_Version__c.field-meta.xml
<CustomField>
    <fullName>Old_SW_Version__c</fullName>
    <label>Old SW Version</label>
    <length>11</length>
    <type>Text</type>
</CustomField>