force-app/main/default/objects/Vent_SW_Upgrade_Info__c/fields/Operator_Name__c.field-meta.xml
<CustomField>
    <fullName>Operator_Name__c</fullName>
    <label>Operator Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>