force-app/main/default/objects/Vent_SW_Upgrade_Info__c/fields/Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Serial Number</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Vent SW Upgrade Infos</relationshipLabel>
    <relationshipName>Vent_SW_Upgrade_Infos</relationshipName>
    <type>Lookup</type>
</CustomField>