force-app/main/default/objects/Vent_SW_Upgrade_Info__c/listViews/All_Vent_SW_Upgrade_Infos.listView-meta.xml
<ListView>
    <fullName>All_Vent_SW_Upgrade_Infos</fullName>
    <columns>Serial_Number__c</columns>
    <columns>NAME</columns>
    <columns>Operator_Name__c</columns>
    <columns>New_SW_Version__c</columns>
    <columns>Old_SW_Version__c</columns>
    <columns>Date__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Remarks__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Vent SW Upgrade Infos</label>
    <language>en_US</language>
</ListView>